feature: rotate, handle click

--- a/game.html
+++ b/game.html
@@ -3,20 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <title>RotateMaze</title>
-    <script src="./dist/game.js"></script>
-    <link rel="stylesheet" href="game.css">
+    <link rel="stylesheet" href="./src/game.css">
   </head>
   <body>
     <div id="root"></div>
-    <script>
-      const gameData = [
-          [[1,0], [1,2], [1,3]],
-          [[2,0], [2,1], [2,3]],
-          [[3,0], [3,1], [3,2]],
-          [[0,1], [0,2], [0,3]],
-      ]
-      const game = new Game(gameData);
-      game.render();
-    </script>
+    <script src="./dist/game.js"></script>
   </body>
 </html>
